updated sample env

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,2 @@
-PORT=8080
-NODE_ENV=development
-MONGO_URI=''
+SESSION_SECRET=some_number_here
+MONGO_URI=get_your_uri_from_mongo_db_and_paste_it_here
